# inchspace

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
scripts/: generate-icons.mjs  refresh-macos-icon-cache.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
