[package]
name = "inchspace"
version = "0.1.0"
description = "方寸 InchSpace desktop application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inchspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
plist = "1"
base64 = "0.22"
png = "0.17"
sysinfo = { version = "0.39.5", default-features = false, features = ["network", "system"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSBitmapImageRep", "NSImage", "NSImageRep", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSDictionary", "NSGeometry", "NSObject", "NSString"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "0.61", features = [
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
